Dennett: Twitter & qualia.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1113,6 +1113,8 @@
         Dennett's web page on the website of Tufts University. 
         See also <a href="http://ase.tufts.edu/cogstud/dennett/bibliography.html">Dennett's bibliography</a>.
       </li>
+      <li><a href="https://twitter.com/danieldennett">Daniel Dennett on Twitter</a>.
+      </li>
       <li>Zawidzki, Tadeusz:
         <span class="booktitle">Dennett</span>. Oneworld Thinkers.
         Oneworld Publications,<!-- May --> 2007.
@@ -1122,6 +1124,14 @@
         <i class="booktitle">Daniel Dennett</i>.
         Cambridge University Press, 2002.
         <a href="http://www.cambridge.org/de/academic/subjects/philosophy/twentieth-century-philosophy/daniel-dennett"><abbr>ISBN</abbr> 9780521008648</a> (320 pages).
+      </li>
+      <li>Dennett on <a href="https://en.wikipedia.org/wiki/Qualia">qualia</a>:
+        <ul>
+          <li>Dennett, Daniel:
+            <a href="http://ase.tufts.edu/cogstud/dennett/papers/History_of_Qualia.pdf">History of Qualia</a>
+            (draft paper).
+          </li>
+        </ul>
       </li>
     </ul>
     <!-- Misc
