Dawkins: Science in the Soul.

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -150,6 +150,17 @@
         and author of <i class="booktitle">The Big Picture: On the Origins of Life, Meaning, and the Universe Itself</i>
         (Penguin Random House, 2016, <a href="http://www.penguinrandomhouse.com/books/316646/the-big-picture-by-sean-carroll/9781101984253/"><abbr>ISBN</abbr> 9781101984253</a>).
       </li>
+      <li>Dawkins, Richard:
+        <i class="booktitle">Science in the Soul: Selected Writings of a Passionate Rationalist</i>. Penguin, 2017.
+        <a href="https://www.penguin.co.uk/books/1112115/science-in-the-soul/"><abbr>ISBN</abbr> 9781784162016</a>.
+        <br />See the review by Aravindan Neelakandan:
+        <a href="https://swarajyamag.com/science/dawkins-carries-forward-the-lamp-of-reason-in-his-latest-and-it-burns-just-as-bright-">Dawkins Carries Forward The Lamp Of Science In His Latest, And It Burns Just As Bright</a>
+        (<i class="magazine">Swarajya</i>, 02.09.2017; recommended by <a href="https://twitter.com/RichardDawkins/status/904693978741841920">Dawkins</a>).
+      </li>
+      <li>
+        <a href="https://philosophy.stackexchange.com/q/45740/23586">How to argue for science against religion (<abbr>ft.</abbr> <abbr>IASIP</abbr>)?</a>:
+        question on Philosophy StackExchange.
+      </li>
     </ul>
 
     <h2>Other Resources</h2>
