Hristo Vassilev: 28 Books on Stoicism.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1273,6 +1273,10 @@
         <a href="https://aeon.co/ideas/arabic-translators-did-far-more-than-just-preserve-greek-philosophy">Arabic translators did far more than just preserve Greek philosophy</a>,
         <i class="magazine">Aeon</i>, no date. Licence: <abbr title="Creative Commons Attribution-NoDerivatives">CC BY-ND</abbr>.
       </li>
+      <li>Hristo Vassilev:
+        <a href="https://dailystoic.com/books-on-stoicism/">28 Books On Stoicism: The (Hopefully) Ultimate Reading List</a>,
+        <i class="website">Daily Stoic</i> (September 2017?).
+      </li>
       <!-- @@move to humanities
         https://twitter.com/redaktionmerkur
       <li>
