YT: Why People Don't Believe in Climate Science.

--- a/science/index.html
+++ b/science/index.html
@@ -37,9 +37,10 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
-          <li><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
-          <!--li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a-->
+          <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a></li>
+          <li class="notyet"><a href="../science/machine-learning.html">Machine Learning</a></li>
+          <li><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a></li>
+          <!--li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li-->
         </ul>
       </li>
       <li><a href="../science/index.html">Humanities</a>
@@ -731,6 +732,10 @@
         <a href="https://www.youtube.com/watch?v=n3MmXmAACUM">2 Flaws Plague Unscientific Belief, from Trump &amp; Alt-Right to Religious Doctrine</a>
         (BigThink on YouTube, 5 minutes, 15.08.2017).
       </li>
+      <li>It's Okay To Be Smart:
+        <a href="https://www.youtube.com/watch?v=y2euBvdP28c">Why People Don't Believe In Climate Science</a>
+        (YouTube, 8 minutes, 15.12.2014).
+      </li>
       <!--
       <li>
         <a href=""></a>
@@ -767,10 +772,6 @@
 
     <h2>Unsorted Links</h2>
     <ul>
-      <li>Dunietz, Jesse: 
-        <a href="http://nautil.us/blog/-the-fundamental-limits-of-machine-learning">The Fundamental Limits of Machine Learning</a>,
-        <i class="magazine">Nautilus</i>, 14.08.2017.
-      </li>
       <li>Sewell, Martin: 
         <a href="http://no-free-lunch.org/">No Free Lunch Theorems</a>.
       </li>
