+ The Drowned World.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1440,6 +1440,59 @@
     </ul>
 
     <h3>Other Topics</h3>
+    <h4>The Drowned World (Ballard)</h4>
+    <ul>
+      <li>Ballard, James Graham:
+        <i class="booktitle">The Drowned World</i>. [1962]. Fiftieth Anniversary Edition. Norton, 2012 (hardback) / 2013 (paperback).
+        <a href="http://books.wwnorton.com/books/detail.aspx?ID=4294972293"><abbr>ISBN</abbr> 978-0-87140-362-9</a>.
+        <br />Ballard's second novel is a science fiction novel in which the ice caps have melted.
+        London experiences tropical temperatures and flooding.
+      </li>
+      <li>Wikipedia: <a href="https://en.wikipedia.org/wiki/The_Drowned_World">The Drowned World</a>.
+      </li>
+      <li><a href="http://www.jgballard.ca/criticism/jgb_drowned_world.html">The Drowned World</a>
+        on jgballard.ca.
+      </li>
+      <li>Will Self:
+        <a href="http://www.telegraph.co.uk/culture/books/10273413/Will-Self-on-JG-Ballards-The-Drowned-World.html">Will Self on JG Ballard's 'The Drowned World'</a>,
+        <i class="newspaper">The Telegraph</i>, 31.08.2013.
+      </li>
+      <li>Tracey Clement:
+        <a href="https://traceyclement.com/category/drowned-world-maps/">Drowned World: Loximuthal Projection</a>.
+      </li>
+      <li>Andrew Liptak:
+        <a href="https://www.theverge.com/2017/4/22/15386776/earth-day-best-sci-fi-books-bacigalupi-atwood-ballard">14 sci-fi books about climate change's worst case scenarios</a>,
+        <i class="website">The Verge</i>, 22.04.2017.
+        <br />The list contains the following books: Margaret Atwood's MaddAdam trilogy 
+        (<a href="https://en.wikipedia.org/wiki/MaddAddam"><i class="booktitle">MaddAddam</i></a>, 
+        <a href="https://en.wikipedia.org/wiki/Oryx_and_Crake"><i class="booktitle">Oryx and Crake</i></a>, 
+        <a href="https://en.wikipedia.org/wiki/The_Year_of_the_Flood"><i class="booktitle">The Year of the Flood</i></a>),
+        Paolo Bacigalupi's novels 
+        <a href="https://en.wikipedia.org/wiki/The_Windup_Girl"><i class="booktitle">The Windup Girl</i></a> (2009) and
+        <a href="https://en.wikipedia.org/wiki/The_Water_Knife"><i class="booktitle">The Water Knife</i></a> (2015),
+        J. G. Ballard's novel <i class="booktitle">The Drowned World</i> (1962),
+        Nora K. Jemisin's broken earth trilogy
+        (<a href="https://en.wikipedia.org/wiki/The_Fifth_Season_(novel)"><i class="booktitle">The Fifth Season</i></a> (2015),
+        <a href="https://en.wikipedia.org/wiki/The_Obelisk_Gate"><i class="booktitle">The Obelisk Gate</i></a> (2016),
+        <a href="https://en.wikipedia.org/wiki/The_Stone_Sky"><i class="booktitle">The Stone Sky</i></a> (2017)),
+        Edan Lepucki's debut novel 
+        <a href="https://en.wikipedia.org/wiki/California_(novel)"><i class="booktitle">California</i></a> (2014),
+        Kim Stanley Robinson's novel 
+        <a href="https://en.wikipedia.org/wiki/New_York_2140"><i class="booktitle">New York 2140</i></a> (2017),
+        Jeff VanderMeer's Area X trilogy
+        (<i class="booktitle">Annihilation</i>, <i class="booktitle">Authority</i>, <i class="booktitle">Acceptance</i> (2014))
+        and Claire Vaye Watkins' novel
+        <a href="https://en.wikipedia.org/wiki/Gold_Fame_Citrus"><i class="booktitle">Gold Fame Citrus</i></a> (2015).
+        The list only considers English-language fiction, mostly by American authors.
+      </li>
+      <!--More links: https://duckduckgo.com/?q=%22The+Drowned+World%22+ballard+%22climate+change%22&ia=web -->
+      <!--
+      <li>:
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
+    </ul>
     <h4>Gregory Bateson</h4>
     <p><a href="https://en.wikipedia.org/wiki/Gregory_Bateson">Gregory Bateson</a> (1904 &ndash; 1980),
       <q>anthropologist, social scientist, linguist, visual anthropologist, semiotician, and cyberneticist</q>.
