Mark Blyth about Friedman.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1639,6 +1639,13 @@
       <li>Friedman, Milton; Friedman, Rose D.:
         <i class="booktitle">Two Lucky People: Memoirs</i>. 1998.
       </li>
+      <li>The Progressive Voice:
+        <a href="https://www.youtube.com/watch?v=3ATebIivh1k">Economist Milton Friedman DESTROYED By Economist Mark Blyth For 'Stupid Economic Ideas'</a>
+        (YouTube, 5 minutes, 02.09.2017).
+        <a href="https://en.wikipedia.org/wiki/Mark_Blyth">Mark Blyth</a> is the author of
+        <a href="https://global.oup.com/academic/product/austerity-9780199389445"><i class="booktitle">Austerity: The History of a Dangerous Idea</i></a>
+        (Oxford University Press, 2013).
+      </li>
       <li><a href="https://en.wikipedia.org/wiki/Eduardo_Galeano">Galeano, Eduardo</a>:
         <a href="https://en.wikipedia.org/wiki/Days_and_Nights_of_Love_and_War" class="booktitle">Days and Nights of Love and War</a>. 1983.
         (Originally in Spanish: <i class="booktitle" lang="es">Días y Noches de Amor y de Guerra</i>, 1978.)
