Lustig: The Hacking of the American Mind.

--- a/lijst.html
+++ b/lijst.html
@@ -37,9 +37,10 @@
           <li><a href="./science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li class="notyet"><a href="./science/mathematics.html">Mathematics &amp; Statistics</a>
-          <li><a href="./science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
-          <!--li><a href="./science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a-->
+          <li class="notyet"><a href="./science/mathematics.html">Mathematics &amp; Statistics</a></li>
+          <li class="notyet"><a href="./science/machine-learning.html">Machine Learning</a></li>
+          <li><a href="./science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a></li>
+          <!--li><a href="./science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li-->
         </ul>
       </li>
       <li><a href="./humanities/index.html">Humanities</a>
@@ -340,6 +341,15 @@
 
   <h2>Various Other Topics</h2>
   <ul>
+    <li>Lustig, Robert H.:
+      <i class="http://www.penguinrandomhouse.com/books/531013/the-hacking-of-the-american-mind-by-robert-h-lustig-md-msl/9781101982594/">The Hacking of the American Mind: The Science Behind the Corporate Takeover of Our Bodies and Brains</i>.
+      Penguin Random House, 2017. (352 pages)
+      <a href="http://www.penguinrandomhouse.com/books/531013/the-hacking-of-the-american-mind-by-robert-h-lustig-md-msl/9781101982594/"><abbr>ISBN</abbr> 9781101982587</a>.
+      <br />See also the <a href="http://www.robertlustig.com/hacking/">author's website</a>, 
+      and talks by and interviews with the author:
+      <a href="https://www.youtube.com/watch?v=EKkUtrL6B18">The Hacking of the American Mind with Dr. Robert Lustig</a> (33 minutes, <abbr title="University of California Television">UCTV</abbr>, 06.09.2017),
+      <a href="https://www.youtube.com/watch?v=VH3Ndztq7YM">Dr. Mercola and Dr. Lustig on The Hacking of the American Mind</a> (59 minutes).
+    </li>
     <li>Bauer, Johannes: <i class="booktitle">Programming Smalltalk – Object-Orientation from the Beginning</i>.
       Springer, 2015. 
       <a href="http://www.springer.com/us/book/9783658068226"><abbr>ISBN</abbr> 978-3-658-06822-6</a>.
