--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -37,9 +37,10 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
-          <li class="active"><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
-          <!--li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a-->
+          <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a></li>
+          <li class="notyet"><a href="../science/machine-learning.html">Machine Learning</a></li>
+          <li class="active"><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a></li>
+          <!--li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li-->
         </ul>
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
