--- a/philscience/index.html
+++ b/philscience/index.html
@@ -227,6 +227,10 @@
         Paris: Éditions Rue d’Ulm/Presses de l’École normale supérieure</span>, 2006.
         <abbr>ISBN</abbr> 2-7288-0357-9.
       </li>
+      <li>Barker, Gillian; Kitcher, Philip:
+        <i class="booktitle">Philosophy of Science: A New Introduction</i>. Oxford University Press, 2013. (192 pages)
+        <a href="https://global.oup.com/academic/product/philosophy-of-science-9780195366198"><abbr>ISBN</abbr> 9780195366198</a>.
+      </li>
       <!-- 
         * Ladyman, James: Understanding Philosophy of Science. Routledge, 2001. 
           (In 2009, Massimo Pigliucci wrote, "Still, I'm planning to use this book next semester in a 300-level class on philosophy of science, and I'm looking forward to the puzzled reactions of my students when they'll begin to appreciate how little we understand about how science works." http://www.amazon.com/Understanding-Philosophy-Science-James-Ladyman/dp/0415221579/
