--- a/philscience/index.html
+++ b/philscience/index.html
@@ -231,6 +231,20 @@
         <i class="booktitle">Philosophy of Science: A New Introduction</i>. Oxford University Press, 2013. (192 pages)
         <a href="https://global.oup.com/academic/product/philosophy-of-science-9780195366198"><abbr>ISBN</abbr> 9780195366198</a>.
       </li>
+      <li>DeWitt, Richard:
+        <i class="booktitle">Worldviews: An Introduction to the History and Philosophy of Science</i>.
+        Second edition. Wiley-Blackwell, 2010. (392 pages)
+        <a href="http://eu.wiley.com/WileyCDA/WileyTitle/productCd-EHEP002262.html"><abbr>ISBN</abbr>  978-1-4051-9563-8</a>.
+        <!--@@PDF sample chapters-->
+        <br />According to Joel Ballavian, who teaches or taught the course
+        <a href="https://sites.google.com/site/philosophyballivian/home">Philosophy of Science (PHIL3550)</a>
+        at Western Michigan University, this is a very accessible book.
+        <!-- McGrew did not use this book in 2012: http://homepages.wmich.edu/~mcgrew/philsci12.htm -->
+        The <a href="http://eu.wiley.com/WileyCDA/WileyTitle/productCd-1119118891.html">third edition</a> 
+        is scheduled for publication in January 2018.
+        Joel Ballavian also recommends the book <i class="booktitle">Inference to the Best Explanation</i>
+        by <a href="https://en.wikipedia.org/wiki/Peter_Lipton">Peter Lipton</a>.<!--@@move elsewhere w description of Joel Ballavian's channel. Review of Lipton's book: http://ndpr.nd.edu/news/inference-to-the-best-explanation-2nd-edition/-->
+      </li>
       <!-- 
         * Ladyman, James: Understanding Philosophy of Science. Routledge, 2001. 
           (In 2009, Massimo Pigliucci wrote, "Still, I'm planning to use this book next semester in a 300-level class on philosophy of science, and I'm looking forward to the puzzled reactions of my students when they'll begin to appreciate how little we understand about how science works." http://www.amazon.com/Understanding-Philosophy-Science-James-Ladyman/dp/0415221579/
