--- a/science/index.html
+++ b/science/index.html
@@ -852,6 +852,27 @@
         <a href="https://www.youtube.com/watch?v=Un_m2NGvSKQ">Richard Dawkins Reveals How Science Really Works: Imagination, Intuition, Evidence, and Truth</a>
         (YouTube, 4 minutes, 08.09.2017).
       </li>
+      <li>Tetrad:
+        <ul>
+          <li>Glymour, Clark N.:
+            <a href="http://repository.cmu.edu/cgi/viewcontent.cgi?article=1484&context=philosophy">Discovering causal structure: artificial intelligence, philosophy of science and statistical modeling</a>.
+            Technical report. Dietrich College of Humanities and Social Sciences at Research Showcase at Carnegie Mellon University, 1986.
+            <!--@@PDF-->
+          </li>
+          <li>
+            <a href="http://www.phil.cmu.edu/tetrad/">The Tetrad Project</a>.
+          </li>
+          <li>
+            <a href="https://github.com/cmu-phil/tetrad">Tetrad source code repository</a> (in Java; hosted on GitHub).
+          </li>
+          <li>David Bessler:
+            <a href="https://www.youtube.com/watch?v=el8Hzf2IIrQ">On Micro Economics I: The Use of TETRAD for Demand Specification</a>
+            (YouTube, 02.12.2013, 53 minutes): recording of a lecture at the Workshop on Case Studies of Causal Discovery with Model Search,
+            Carnegie Mellon University, 25–27 October 2013.
+          </li>
+        </ul>
+        <!-- https://duckduckgo.com/?q=tetrad+causal+explanations&ia=web -->
+      </li>
     </ul>
   </main>
 
