--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1009,7 +1009,7 @@
       -->
     </ul>
 
-    <h3>David Hume (1711 - 1776)</h3>
+    <h3>David Hume (1711 – 1776)</h3>
     <ul>
       <li>William Edward Morris &amp; Charlotte R. Brown:
         <a href="http://plato.stanford.edu/entries/hume/">David Hume</a>.
@@ -1066,7 +1066,23 @@
     </ul>
     <!-- Daniel Dennett: "Hume's Strange Inversion of Reasoning", Moscow State University in June 2012: https://www.youtube.com/watch?v=wY9Xm5xgiEE (not mainly focused on Hume, actually) See also https://www.youtube.com/watch?v=cesVHCzw22E -->
 
-    <h3>Bertrand Russell (1872 - 1970)</h3>
+    <h3>Immanuel Kant (1724 – 1804)</h3>
+    <ul>
+      <li>Adrian Moore:
+        <a href="https://fivebooks.com/interview/best-books-kant-adrian-moore/">The best books on Immanuel Kant</a>,
+        <i class="website">Five Books</i> (no date).
+        The recommended books are four books by Immanuel Kant and one by Peter Strawson.
+        The books by Immanuel Kant are
+        <a href="https://en.wikipedia.org/wiki/Critique_of_Pure_Reason"><i class="booktitle">Critique of Pure Reason</i></a> (1781, 1787),
+        <a href="https://en.wikipedia.org/wiki/Groundwork_of_the_Metaphysic_of_Morals"><i class="booktitle">Groundwork of the Metaphysic of Morals</i></a>,
+        <a href="https://en.wikipedia.org/wiki/Critique_of_Judgment"><i class="booktitle">Critique of the Power of Judgment</i></a> (1790) and
+        <a href="https://en.wikipedia.org/wiki/Religion_within_the_Bounds_of_Bare_Reason"><i class="booktitle">Religion Within the Boundaries of Mere Reason</i></a> (1793).
+        The last book is Peter Strawson's famous book
+        <a href="https://en.wikipedia.org/wiki/The_Bounds_of_Sense"><i class="booktitle">The Bounds of Sense: An Essay on Kant’s Critique of Pure Reason</i></a> (1966).
+      </li>
+    </ul>
+
+    <h3>Bertrand Russell (1872 – 1970)</h3>
     <h4>Primary Sources</h4>
     <ul>
       <li>Russell, Betrand:
@@ -1143,7 +1159,7 @@
       Radboud Universiteit: Verkort traject Filosofie : http://www.ru.nl/opleidingen/bachelor/filosofie/studieprogramma/verkort-traject/
     -->
 
-    <h3>Kazimierz Twardowski (1866 - 1938)</h3>
+    <h3>Kazimierz Twardowski (1866 – 1938)</h3>
     <ul>
       <li>Betti, Arianna:
         <a href="http://plato.stanford.edu/entries/twardowski/">Kazimierz Twardowski</a>,
