Blackburn: best books on/by David Hume.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1011,6 +1011,17 @@
 
     <h3>David Hume (1711 – 1776)</h3>
     <ul>
+      <li>Simon Blackburn:
+        <a href="https://fivebooks.com/interview/best-books-david-hume-simon-blackburn/">The best books on David Hume</a>,
+        <i class="website">Five Books</i> (no date).
+        The five recommended book are
+        <i class="booktitle">The Life of David Hume</i> (1954) by Ernest Mossner,
+        <a href="https://en.wikipedia.org/wiki/An_Enquiry_Concerning_Human_Understanding"><i class="booktitle">An Enquiry Concerning Human Understanding</i></a> (1748) by David Hume,
+        <a href="https://en.wikipedia.org/wiki/Dialogues_Concerning_Natural_Religion"><i class="booktitle">Dialogues Concerning Natural Religion</i></a> (posthumous) by David Hume,
+        <i class="booktitle">The Philosophy of David Hume: A Critical Study of Its Origins and Central Doctrines</i> (1941) by 
+        <a href="https://en.wikipedia.org/wiki/Norman_Kemp_Smith">Norman Kemp Smith</a> and
+        <a href="https://en.wikipedia.org/wiki/Critique_of_Pure_Reason"><i class="booktitle">Critique of Pure Reason</i></a> (1781, 1787) by Immanuel Kant.
+      </li>
       <li>William Edward Morris &amp; Charlotte R. Brown:
         <a href="http://plato.stanford.edu/entries/hume/">David Hume</a>.
         Entry in the <i class="website">Stanford Encyclopedia of Philosophy</i>.
