Warburton: Best intros to philosophy.

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -356,6 +356,16 @@
         its disciplines and its methods. (History of philosophy is treated as a discipline of philosophy.)
         The second article consists mainly of a list of links to articles and webpages about the value of philosophy.
       </li>
+      <li>Warburton, Nigel:
+        <a href="https://fivebooks.com/interview/nigel-warburton-on-introductions-to-philosophy/">Nigel Warburton recommends the best Introductions to Philosophy</a>,
+        <i class="website">Five Books</i> (no date).
+        The book recommendations are
+        <i class="booktitle">What Does It All Mean</i> by Thomas Nagel,
+        <i class="booktitle">The Life You Can Save</i> by Peter Singer,
+        <i class="booktitle">Justice</i> by Michael Sandel,
+        <i class="booktitle">Causing Death and Saving Lives</i> by Jonathan Glover and
+        <i class="booktitle">The Grasshopper</i> by Bernard Suits.
+      </li>
       <li><a href="https://www.youtube.com/watch?v=kjDcM4ZXtfY">Student Philosopher: Where to Start with Philosophy?</a>,
         a video by the School of Life.
         The video explains that one should lose the fear of the subject and 
