--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1153,6 +1153,12 @@
         Cambridge University Press, 2002.
         <a href="http://www.cambridge.org/de/academic/subjects/philosophy/twentieth-century-philosophy/daniel-dennett"><abbr>ISBN</abbr> 9780521008648</a> (320 pages).
       </li>
+      <li>Dennett, Daniel C.: 
+        <a href="https://www.secularhumanism.org/index.php/articles/9557">Philosophy as the Las Vegas of Rational Enquiry</a>, 
+        <i class="magazine">Free Inquiry</i>, Volume 37, Issue 5 (August/September 2017).
+        Dennett paraphrased this on Twitter as
+        <a href="https://twitter.com/danieldennett/status/910509730296205312">What happens in philosophy stays in philosophy, mostly</a> (20.09.2017).
+      </li>
       <li>Dennett on <a href="https://en.wikipedia.org/wiki/Qualia">qualia</a>:
         <ul>
           <li>Dennett, Daniel:
