--- a/science/index.html
+++ b/science/index.html
@@ -812,6 +812,10 @@
         <a href="https://www.youtube.com/watch?v=y1MZ8U8C9c8">Neil deGrasse Tyson scolds cherry picking climate science</a>
         (YouTube, 5 minutes, 17.09.2017).
       </li>
+      <li>Anapol, Avery:
+        <a href="http://thehill.com/blogs/in-the-know/in-the-know/351774-dicaprio-history-will-vilify-trump-for-not-fighting-climate">DiCaprio: History will ‘vilify’ Trump for not fighting climate change</a>,
+        <i class="newspaper">The Hill</i>, 21.09.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
