--- a/humanities/index.html
+++ b/humanities/index.html
@@ -399,6 +399,15 @@
     </blockquote>
 
 
+    <h2>Linguistics</h2>
+    <ul>
+      <li>Dorren, Gaston:
+        <a href="https://aeon.co/essays/why-is-linguistics-such-a-magnet-for-dilettantes-and-crackpots">Why is linguistics such a magnet for dilettantes and crackpots?</a>,
+        <i class="magazine">Aeon</i>, 14.09.2017.
+      </li>
+    </ul>
+
+
     <h2>Miscellaneous Other Links</h2>
     <ul>
       <li>The Gombrich Archive:
