--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -111,6 +111,10 @@
         <a href="https://www.theguardian.com/technology/2017/jan/27/ai-artificial-intelligence-watchdog-needed-to-prevent-discriminatory-automated-decisions"><abbr>AI</abbr> watchdog needed to regulate automated decision-making, say experts</a>,
         <i class="newspaper">The Guardian</i>, 27.01.2017.
       </li>
+      <li>Cathy O'Neil:
+        <a href="https://www.youtube.com/watch?v=_2u_eHHzRto">The era of blind faith in big data must end</a>
+        <i class="conference"><!--@@CSS class--><abbr>TED</abbr></i> (YouTube, 13 minutes, 07.09.2017).
+      </li>
       <li>Scott Adams:
         <a href="http://dilbert.com/strip/2017-09-05">Dilbert, 05.09.2017</a>.
       </li>
