--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1431,12 +1431,36 @@
         Wien: facultas wuv, 2009. (106 Seiten)
         <a href="http://www.utb-shop.de/wahrheit-3334.html"><abbr>ISBN</abbr> 9783825232313</a>.
       </li>
-      <!-- 
+      <!--
       <li>
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
       </li>
       -->
+    </ul>
+
+    <h3><span lang="nl">Adriaen Koerbagh</span> (1633 – 1669)</h3>
+    <ul>
+      <li>
+        <a href="https://nl.wikipedia.org/wiki/Adriaen_Koerbagh" hreflang="nl" lang="nl">Adriaen Koerbagh</a> (1633 – 1669).
+      </li>
+      <li lang="nl">Bart Leeuwenburgh:
+        <i class="booktitle">Het noodlot van een ketter: Adriaan Koerbagh (1633-1669)</i>. Vantilt, 2012.
+        <a href="https://www.boomfilosofie.nl/product/100-734_Het-noodlot-van-een-ketter"><abbr>ISBN</abbr> 9789460041143</a>.
+      </li>
+      <li lang="nl">Adriaan Koerbagh:
+        <i class="booktitle">Een licht dat schijnt in duistere plaatsen</i>. Vantilt, 2014.
+        <a href="https://www.boomfilosofie.nl/zoeken/100-537_Een-licht-dat-schijnt-in-duistere-plaatsen"><abbr>ISBN</abbr> 9789460041709</a>.
+      </li>
+      <li lang="nl">Eric Palmen:
+        <a href="http://biografieportaal.nl/recensie/adriaan-koerbagh-spinozist/">Adriaan Koerbagh, spinozist</a>,
+        <i class="website">Biografieportaal</i>, 18.04.2013.
+        <br /><a href="https://www.vantilt.nl/het-noodlot-van-een-ketter-genomineerd/">‘Het noodlot van een ketter’ genomineerd</a>, 06.03.2015.
+      </li>
+      <li lang="nl">Hubert Vandenbossche:
+        <a href="https://philpapers.org/rec/VANAKE">Adriaan Koerbagh en Spinoza</a>, 1978.
+        (<a href="http://www.worldcat.org/title/adriaan-koerbagh-en-spinoza/oclc/8059808">WorldCat</a>.)
+      </li>
     </ul>
 
     <h3>Other Topics</h3>
