+h2: Thinking and Reasoning.

--- a/lijst.html
+++ b/lijst.html
@@ -339,6 +339,29 @@
     </li>
   </ul>
 
+  <h2>Thinking and Reasoning</h2>
+  <ul>
+    <li>Bowker, Geoffrey C.; Star, Susan Leigh: 
+      <strong><i class="booktitle">Sorting Things Out: Classification and Its Consequences</i></strong>.
+      <abbr>MIT</abbr> Press, 1999.
+      <a href="https://mitpress.mit.edu/books/sorting-things-out"><abbr>ISBN</abbr> 9780262522953</a>.
+    </li>
+    <li>Bowker, Geoffrey C.; Timmermans, Stefan; Clarke, Adele C.; Balka, Ellen, eds.: 
+      <i class="booktitle">Boundary Objects and Beyond: Working with Leigh Star</i>. 
+      <abbr>MIT</abbr> Press, 2016.
+      <a href="https://mitpress.mit.edu/books/boundary-objects-and-beyond"><abbr>ISBN</abbr> 9780262528085</a>.
+      <!-- See https://en.wikipedia.org/wiki/Boundary_object -->
+    </li>
+    <li>Young, Gregg: <i class="booktitle">Reasoning Backward: How Sherlock Holmes Can Make You a Better Problem Solver</i>.
+      Gazelle Book Services, 2013. (344 pages)
+      <abbr>ISBN</abbr> 978-0983011309.
+    </li>
+    <li>Konnikova, Maria: <i class="booktitle">Mastermind: How to Think Like Sherlock Holmes</i>.
+      Cannongate Books, 2014. (273 pages)
+      <a href="https://canongate.co.uk/books/1924-mastermind-how-to-think-like-sherlock-holmes/"><abbr>ISBN</abbr> [978-0857867278]</a>.
+    </li>
+  </ul>
+
   <h2>Various Other Topics</h2>
   <ul>
     <li>Lustig, Robert H.:
@@ -354,17 +377,6 @@
       Springer, 2015. 
       <a href="http://www.springer.com/us/book/9783658068226"><abbr>ISBN</abbr> 978-3-658-06822-6</a>.
       <!-- @@sample pages on SpringerLink -->
-    </li>
-    <li>Bowker, Geoffrey C.; Star, Susan Leigh: 
-      <strong><i class="booktitle">Sorting Things Out: Classification and Its Consequences</i></strong>.
-      <abbr>MIT</abbr> Press, 1999.
-      <a href="https://mitpress.mit.edu/books/sorting-things-out"><abbr>ISBN</abbr> 9780262522953</a>.
-    </li>
-    <li>Bowker, Geoffrey C.; Timmermans, Stefan; Clarke, Adele C.; Balka, Ellen, eds.: 
-      <i class="booktitle">Boundary Objects and Beyond: Working with Leigh Star</i>. 
-      <abbr>MIT</abbr> Press, 2016.
-      <a href="https://mitpress.mit.edu/books/boundary-objects-and-beyond"><abbr>ISBN</abbr> 9780262528085</a>.
-      <!-- See https://en.wikipedia.org/wiki/Boundary_object -->
     </li>
     <li>Bowker, Geoffrey C.: <i class="booktitle">Memory Practices in the Sciences</i>. 
       <abbr>MIT</abbr> Press, 2006.
@@ -386,12 +398,17 @@
       <a href="https://en.wikipedia.org/wiki/Crystallizing_Public_Opinion"><abbr>ISBN</abbr> 978-1935439264</a> (reprinted by Ig Publishing).
       <!-- https://www.amazon.de/Crystallizing-Public-Opinion-Edward-Bernays/dp/193543926X/ -->
     </li>
-    <li>Lippann, Walter: <i class="booktitle">The Phantom Public</i> (1925). 
+    <li>Lippann, Walter: <i class="booktitle">The Phantom Public</i> (1925).
       <a href="https://en.wikipedia.org/wiki/The_Phantom_Public"><abbr>ISBN</abbr> 978-1560006770</a>.
     </li>
-    <li>Bernays, Edward: <i class="booktitle">Propaganda</i> (1928). 
+    <li>Bernays, Edward: <i class="booktitle">Propaganda</i> (1928).
       <a href="https://en.wikipedia.org/wiki/Propaganda_(book)"><abbr>ISBN</abbr> 978-0970312594</a> (reprinted by Ig Publishing, 2004).
       <!-- https://www.amazon.de/gp/product/0970312598/ -->
+    </li>
+    <li>Junger, Sebastian:
+      <i class="booktitle">Tribe</i>. Fourth Estate / HarperCollins, 2017. (192 pages)
+      <a href="https://www.harpercollins.co.uk/9780008168186/tribe"><abbr>ISBN</abbr> 9780008168186</a>.
+      (<a href="http://www.sebastianjunger.com/tribe-by-sebastian-junger">Sebastian Junger's website</a>.)
     </li>
     <!--
     <li> : <i class="booktitle"></i>. 
